@@ -1,3 +1,4 @@
+Micro tab: Made sodium ion particles flow toward drain faucet at an even rate
 Micro tab: Made it so that components flow out through the drain faucet
 Micro tab: Fixed: Sometimes when water too low, drawing errors occur, like NaN or Infinity
 Micro tab: Water flows toward the drain
